# cityjson

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  justfile  pyproject.toml  release.toml
crates/cityjson/: .gitignore  BENCHMARK_GUIDE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile
crates/cityjson-arrow/: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  STATUS.md  clippy-unresolved-proposal.md  justfile  mkdocs.yml  properdocs.yml  pyproject.toml
crates/cityjson-arrow/.claude/: CITYJSON_RS_API_REFERENCE.md  implementation-plan.md  review.md
crates/cityjson-arrow/benches/: read.rs  split.rs  write.rs
crates/cityjson-arrow/cityjson-parquet/: Cargo.toml
crates/cityjson-arrow/cityparquet/: Cargo.toml
crates/cityjson-arrow/docker/: docker-compose.yaml
crates/cityjson-arrow/docs/: adr-002-003-benchmark-follow-up.md  adr-002-003-borrowed-strings-decision.md  adr-002-003-optimization-plan.md  adr-003-implementation-plan.md  adr-005-v3-implementation-plan.md  cityarrow.erd.json  cityarrow.md  cityjson-arrow-ipc-spec.md  cityjson-arrow.md  cityjson-parquet-spec.md  cityjson-parquet.md  cityparquet.md  design.md  implementation-plan.md  index.md  package-schema.md  package-spec.md  package.md  status.md
crates/cityjson-arrow/src/: attributes_to_arrow.rs  cityarrow.erd.json  codec.rs  conversion.rs  convert.rs  error.rs  internal.rs  lib.rs  reader.rs  schema.rs  schema.sql  stream.rs  transport.rs  writer.rs
crates/cityjson-arrow/tests/: acceptance_bridge.rs  adr3_roundtrip.rs  conformance.rs  conversion.rs  correctness_roundtrip.rs  feature_root_id_roundtrip.rs  manifest_roundtrip.rs  package.rs  schema.rs  shared_corpus_roundtrip.rs
crates/cityjson-fake/: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  justfile
crates/cityjson-fake/src/: attribute.rs  citymodel.rs  cli.rs  lib.rs  main.rs  manifest.rs  material.rs  metadata.rs  texture.rs  vertex.rs
crates/cityjson-fake/tests/: api.rs  fuzz.proptest-regressions  fuzz.rs  validation.rs
crates/cityjson-index/: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.rs  LICENSE-APACHE  LICENSE-MIT  PERF_TEST_GUIDE.md  README-1.md  README.md  justfile
crates/cityjson-index/benches/: cityjson.rs  feature_files.rs  ndjson.rs  parallel_get.rs  support.rs
crates/cityjson-index/docs/: adr-full-integration-bench-harness.md  adr-realistic-read-benches-and-byte-range-reads.md  cjindex-3dbag-benchmark-data-prep-plan.md  cjindex-backend-perf-investigation-plan.md  cjindex-backend-perf-investigation-results.md  cjindex-byte-range-reads-plan.md  cjindex-cli-streaming-docs-plan.md  cjindex-full-integration-benches-plan.md  cjindex-full-integration-benches-results.md  cjindex-integration-readiness-plan.md  cjindex-realistic-read-benches-plan.md  cjindex-realistic-read-benches-results.md  cjlib-cityjson-reading-plan-review.md  cjlib-cityjson-reading-plan.md  cjlib-feature-base-helper-plan.md  full-scan-iterator-plan.md  indexing-benchmark-and-test-cleanup-plan.md  page-oriented-full-scan-plan.md  parallel-indexing-plan.md  python-publishing.md  shared-corpus-migration-plan.md  z-bounds-plan.md
crates/cityjson-index/ffi/: README.md
crates/cityjson-index/python/: pyproject.toml  setup.py
crates/cityjson-index/scripts/: build-cityjson-lib-python-wheel.sh
crates/cityjson-index/src/: benchmark.rs  ffi.rs  fixtures.rs  lib.rs  main.rs  profile.rs  realistic_workload.rs
crates/cityjson-index/tests/: cityjson.rs  cli.rs  corpus.rs  feature_files.rs  ndjson.rs  profile.rs
crates/cityjson-index/tools/: ffi.sh
crates/cityjson-json/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  aggressive_deserialization_redesign_plan_2026-03-25.md  justfile  migration_plan_cityjson_rs.md
crates/cityjson-json/benches/: README.md  datasize.rs  read.rs  serde_cityjson_benchmark.rs  speed.rs  write.rs
crates/cityjson-json/docs/: benchmark_implementation_plan.md  design.md  development.md  performance-analysis.md  shared-corpus-migration-plan.md
crates/cityjson-json/resources/: extract_boundaries.py  generate_data_zero_copy.py  prepare_local_benchmark_index.py
crates/cityjson-json/src/: attributes.rs  borrow_value.rs  boundary.rs  datasize.rs  de.rs  errors.rs  facade.rs  indices.rs  labels.rs  lib.rs  ser.rs  serde_cityjson.rs  v1_1.rs  v2_0.rs
crates/cityjson-json/tests/: common.rs  lib.rs  main.rs  v1_1.rs  v2_0.rs
crates/cityjson-json/tools/: ci_bench_gate.sh
crates/cityjson-lib/: .env  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  justfile  mkdocs.yml  properdocs.yml  pyproject.toml  python-requirements-dev.txt
crates/cityjson-lib/bench_results/: README.md  history.csv
crates/cityjson-lib/bench_support/: mod.rs
crates/cityjson-lib/benches/: diagnostic.rs  profile.rs  throughput.rs
crates/cityjson-lib/cityjson-export/: Cargo.toml
crates/cityjson-lib/docs/: api.md  architecture.md  benchmarking.md  ecosystem-naming.md  ecosystem-overview.md  engineering.md  examples.md  faq.md  feature-root-id-propagation-plan.md  format-api.md  guide-reading.md  guide-writing.md  guide.md  implementation-plan.md  index.md  json-api.md  json-stream-first-plan.md  mkdocs.yml  model-api.md  operations-api.md  public-api.md  refactor-plan.md  release-checklist.md  release-roadmap.md  roofer-cjlib-ffi-plan.md  serde-cityjson-integration-plan.md  shared-corpus-migration-plan.md  template-instance-import-note.md  tyler-integration-plan.md  wasm-dogfooding-poc-plan.md
crates/cityjson-lib/examples/: alternate_formats.rs  explicit_json_module.rs  json_document.rs  json_feature_stream.rs  json_roundtrip.rs  model_operations.rs
crates/cityjson-lib/experiments/: benchmark.ipynb  benchmarking.md  direct-json-vs-api.md  ecs.md  geometry_structures.md  python_requirements.txt  vertex-buffer.md
crates/cityjson-lib/ffi/: README.md
crates/cityjson-lib/src/: arrow.rs  attributes.rs  boundary.rs  (+17 more)
crates/cityjson-parquet/: .env  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  STATUS.md  justfile  properdocs.yml  pyproject.toml
(+719 files in other folders)
