[package]
name = "cityjson-arrow"
version = "0.5.2"
edition = "2024"

[[bench]]
name = "split"
harness = false

[workspace]
members = ["cityjson-parquet"]

[dependencies]
arrow = { version = "58.1.0", features = ["ipc", "csv", "json"] }
arrow-buffer = "58.1.0"
arrow-json = "58.1.0"
arrow-select = "58.1.0"
cityjson = { path = "../cityjson-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"
tempfile = "3.23.0"
nanoserde = { version = "0.2.1", features = ["json", "std"] }
memmap2 = "0.9.9"
bytes = "1.10.1"
parquet = "58.1.0"

[dev-dependencies]
cityjson-parquet = { path = "cityjson-parquet" }
cityjson-json = { path = "../cityjson-json" }
rand = "0.10.1"
criterion = "0.8.2"
