[package]
name = "cityjson-fake"
version = "0.5.0"
authors = ["Balázs Dukai <balazs.dukai@3dgi.nl>"]
categories = ["development-tools::testing", "simulation"]
keywords = ["cityjson", "testing", "faker"]
edition = "2024"
description = "Generate fake CityJSON data for testing purposes"
repository = "https://github.com/3DGI/cityjson-fake"
license = "Apache-2.0"
exclude = ["benches/", "tests/", "docs/", ".github/", "tools/", "resources/", "justfile"]

[[bin]]
name = "cjfake"
path = "src/main.rs"
test = false
required-features = ["cli"]

[lib]
name = "cityjson_fake"
path = "src/lib.rs"

[features]
default = []
json = ["dep:cityjson-json"]
cli = ["json", "dep:serde", "dep:serde_json", "dep:jsonschema"]

[dependencies]
cityjson = { path = "../cityjson-rs", version = "0.7.0" }
cityjson-json = { path = "../cityjson-json", version = "0.7.0", optional = true }
fake = { version = "5.1.0", features = ["uuid", "chrono"] }
rand = "0.10.1"
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0.145", optional = true }
jsonschema = { version = "0.46.0", optional = true }

[dev-dependencies]
cjval = "0.9.0"
proptest = "1.9.0"
serde_json = "1.0.145"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--no-deps"]
