[package]
name = "cityjson-fake"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
categories = ["development-tools::testing", "simulation"]
keywords = ["cityjson", "testing", "faker"]
description = "Generate fake CityJSON data for testing purposes"
license = "Apache-2.0"
exclude = ["benches/", "tests/", "docs/", ".github/", "tools/", "resources/", "justfile"]

[[bin]]
name = "cjfake"
path = "src/main.rs"
test = false
required-features = ["cli"]

[lib]
name = "cityjson_fake"
path = "src/lib.rs"

[features]
default = []
json = ["dep:cityjson-json"]
cli = ["json", "dep:serde", "dep:serde_json", "dep:jsonschema"]

[dependencies]
cityjson = { workspace = true }
cityjson-json = { workspace = true, optional = true }
fake = { version = "5.1.0", features = ["uuid", "chrono"] }
rand = "0.10.1"
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0.145", optional = true }
jsonschema = { version = "0.46.0", optional = true }

[dev-dependencies]
cjval = "0.9.0"
proptest = "1.11.0"
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--no-deps"]
