[package]
name = "cjindex"
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
description = "An indexing extension for cjlib."
license = "MIT OR Apache-2.0"
repository = "https://github.com/3DGI/cjindex"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
cjlib = { path = "../cjlib" }
cjlib-ffi-core = { path = "../cjlib/ffi/core" }
clap = { version = "4.6.0", features = ["derive"] }
flatgeobuf = { version = "6.0.1", default-features = false }
flate2 = "1"
globset = "0.4"
ignore = "0.4"
lru = "0.12"
memmap2 = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
walkdir = "2"

[[bench]]
name = "feature_files"
harness = false

[[bench]]
name = "cityjson"
harness = false

[[bench]]
name = "ndjson"
harness = false

[[bench]]
name = "parallel_get"
harness = false

[[bin]]
name = "perf-test"
path = "src/bin/perf-test.rs"
