[package]
name = "cityjson-index"
version = "0.3.0"
authors = ["Balázs Dukai <balazs.dukai@3dgi.nl>"]
edition = "2024"
rust-version = "1.93"
autobins = false
default-run = "cjindex"
description = "Index CityJSON datasets with a persistent SQLite sidecar"
license = "MIT OR Apache-2.0"
repository = "https://github.com/3DGI/cityjson-index"
keywords = ["cityjson", "index", "geospatial", "3d", "gis"]
categories = ["command-line-utilities", "data-structures", "science::geo"]
readme = "README.md"
exclude = [
    "Cargo.lock",
    "benches/",
    "docs/",
    ".github/",
    "python/",
    "src/bin/",
    "tests/",
    "justfile",
    "PERF_TEST_GUIDE.md",
]

[features]
default = []
dev-binaries = []

[package.metadata.docs.rs]
all-features = true
no-deps = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "cjindex"
path = "src/main.rs"

[[bin]]
name = "investigate-read-performance"
path = "src/bin/investigate-read-performance.rs"
required-features = ["dev-binaries"]

[[bin]]
name = "parallel-bench"
path = "src/bin/parallel-bench.rs"
required-features = ["dev-binaries"]

[[bin]]
name = "perf-test"
path = "src/bin/perf-test.rs"
required-features = ["dev-binaries"]

[[bin]]
name = "prep-test-data"
path = "src/bin/prep-test-data.rs"
required-features = ["dev-binaries"]

[dependencies]
cityjson-lib = { path = "../cityjson-lib", version = "0.4.0" }
cityjson-lib-ffi-core = { path = "../cityjson-lib/ffi/core", version = "0.1.0" }
clap = { version = "4.6.0", features = ["derive"] }
flatgeobuf = { version = "6.0.1", default-features = false }
flate2 = "1"
globset = "0.4"
ignore = "0.4"
lru = "0.12"
memmap2 = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
walkdir = "2"

[[bench]]
name = "cityjson"
harness = false

[[bench]]
name = "ndjson"
harness = false

[[bench]]
name = "parallel_get"
harness = false

[[bench]]
name = "feature_files"
harness = false
