[package]
name = "cityjson-index"
version = "0.4.2"
authors = ["Balázs Dukai <balazs.dukai@3dgi.nl>"]
edition = "2024"
rust-version = "1.93"
autobins = false
default-run = "cjindex"
description = "Index CityJSON datasets with a persistent SQLite sidecar"
license = "MIT OR Apache-2.0"
repository = "https://github.com/3DGI/cityjson-index"
keywords = ["cityjson", "index", "geospatial", "3d", "gis"]
categories = ["command-line-utilities", "data-structures", "science::geo"]
readme = "README.md"
exclude = [
    "Cargo.lock",
    "docs/",
    ".github/",
    "ffi/",
    "src/bin/",
    "tests/",
    "justfile",
]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
no-deps = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["rlib"]

[workspace]
members = ["ffi/core"]
resolver = "2"

[[bin]]
name = "cjindex"
path = "src/main.rs"

[[bin]]
name = "bench-index"
path = "src/bin/bench-index.rs"

[dependencies]
cityjson-lib = { version = "0.6.1", default-features = false, features = ["json"] }
clap = { version = "4.6.0", features = ["derive"] }
flatgeobuf = { version = "6.0.1", default-features = false }
flate2 = "1"
globset = "0.4"
ignore = "0.4"
lru = "0.12"
memmap2 = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
walkdir = "2"
