[package]
name = "serde_cityjson"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "serde_cityjson"
path = "src/lib.rs"

[features]
simd = []

[dependencies]
cityjson = { path = "../cityjson-rs" }
derive_more = { version = "2.0.1", features = ["display", "add_assign", "deref", "deref_mut", "from", "into_iterator"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
ahash = { version = "0.8.11", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"]}
pretty_assertions = "1.4.1"

[[bench]]
name = "read"
harness = false

[[bench]]
name = "write"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
