[package]
name = "cityjson-lib"
version = "0.5.1"
edition = "2024"
rust-version = "1.93"
description = "High-level CityJSON 2.0 read/write facade integrating JSON I/O"
license = "MIT OR Apache-2.0"
repository = "https://github.com/3DGI/cityjson-lib"
keywords = ["cityjson", "geospatial", "3d", "gis"]
categories = ["encoding", "science::geo"]
readme = "README.md"
autobenches = false
include = [
    "/src",
    "/examples",
    "/tests",
    "/docs",
    "/resources",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
    "/LICENSE-APACHE",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["json"]
json = ["dep:cityjson-json"]

[workspace]
members = [
    ".",
    "ffi/core",
    "ffi/wasm",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cityjson_lib"
path = "src/lib.rs"

[dependencies]
cityjson = { path = "../cityjson-rs", version = "0.7.1" }
cityjson-json = { path = "../cityjson-json", version = "0.7.2", optional = true }

[dev-dependencies]
criterion = "0.7"
dhat = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tempfile = "3.23"
