[package]
name = "cityjson-parquet"
version = "0.5.2"
edition = "2024"
rust-version = "1.93"
description = "Parquet read/write for CityJSON 2.0 city models via cityjson-arrow"
license = "MIT OR Apache-2.0"
repository = "https://github.com/3DGI/cityjson-arrow"
keywords = ["cityjson", "parquet", "arrow", "geospatial", "3d"]
categories = ["encoding", "science::geo"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cityjson-arrow = { path = "../cityjson-arrow", version = "0.6.0" }
arrow = { version = "58.1.0", features = ["ipc"] }
arrow-array = "58.1.0"
arrow-ipc = "58.1.0"
arrow-schema = "58.1.0"
cityjson = { path = "../cityjson-rs", version = "0.7.0" }
memmap2 = "0.9.9"
serde_json = "1.0"

[[bench]]
name = "package"
harness = false

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
cityjson-json = { path = "../cityjson-json" }
tempfile = "3"
criterion = { version = "0.8.2", features = ["html_reports"] }
