[package]
name = "cityjson"
version = "0.3.0"
edition = "2024"
description = "Types and methods for representing the complete CityJSON data model in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/3DGI/cityjson-rs"
documentation = ""
rust-version = "1.92"



[package.metadata]
# Document platform requirements
platform_support = "64-bit platforms only (x86_64, aarch64, etc.)"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]
default = []

[dependencies]
num = "0.4.3"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
# For custom profiling and benchmarking
dhat = "0.3"  # Heap profiling
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }  # Flamegraph profiling
rand = "0.9.2"

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "builder"
harness = false

[[bench]]
name = "processor"
harness = false

[[bench]]
name = "streaming"
harness = false

[profile.bench]
debug = true  # Enable debug symbols for better profiling
