[package]
name = "cityjson"
version = "0.4.0"
authors = ["Balázs Dukai <balazs.dukai@3dgi.nl>"]
categories = ["data-structures", "science:geo"]
keywords = ["cityjson", "geospatial", "3d", "gis"]
edition = "2024"
description = "Types and accessor methods for representing semantic 3D city models in Rust, implementing the CityJSON specifications."
license = "MIT OR Apache-2.0"
repository = "https://github.com/3DGI/cityjson-rs"
exclude = ["benches/", "tests/", "docs/", "bench_results/", ".github/"]

[package.metadata]
# Document platform requirements
platform_support = "64-bit platforms only (x86_64, aarch64, etc.)"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[features]
default = []

[dependencies]
num = "0.4.3"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
# For custom profiling and benchmarking
dhat = "0.3"  # Heap profiling
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }  # Flamegraph profiling
rand = "0.10.0"

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "builder"
harness = false

[[bench]]
name = "processor"
harness = false

[[bench]]
name = "streaming"
harness = false

[profile.bench]
debug = true  # Enable debug symbols for better profiling
