[package]
name = "cityjson-parquet"
version = "0.5.2"
edition = "2024"

[dependencies]
cityjson-arrow = { path = ".." }
arrow = { version = "58.1.0", features = ["ipc"] }
arrow-array = "58.1.0"
arrow-ipc = "58.1.0"
arrow-schema = "58.1.0"
cityjson = { path = "../../cityjson-rs" }
memmap2 = "0.9.9"
serde_json = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
cityjson-json = { path = "../../cityjson-json" }
tempfile = "3"
