[package]
name = "cityparquet"
version = "0.4.0"
edition = "2024"

[dependencies]
cityarrow = { path = ".." }
arrow = { version = "57.0.0", features = ["ipc"] }
cityjson = { path = "../../cityjson-rs" }
memmap2 = "0.9.9"
serde_json = "1.0"

[dev-dependencies]
serde_cityjson = { path = "../../serde_cityjson" }
tempfile = "3"
