[build-system]
requires = ["setuptools>=69", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "cjindex"
version = "0.3.0"
description = "Python bindings for cjindex"
requires-python = ">=3.11"
dependencies = ["cjlib"]

[tool.uv.sources]
cjlib = { path = "../../cjlib/ffi/python", editable = true }

[tool.setuptools.packages.find]
where = ["src"]
