[build-system]
requires = ["setuptools>=69", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "cityjson-index"
version = "0.3.0"
description = "Python bindings for cityjson-index"
requires-python = ">=3.11"
dependencies = ["cityjson-lib~=0.4.0"]

[tool.uv.sources]
cityjson-lib = { path = "../../cityjson-lib/ffi/python", editable = true }

[tool.setuptools.packages.find]
where = ["src"]
