[package]
name = "cityjson-export"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
publish = false
description = "CLI export tool for cityjson-lib"
license = "MIT OR Apache-2.0"
repository = "https://github.com/3DGI/cityjson-lib"
keywords = ["cityjson", "cli", "export", "geospatial"]
categories = ["command-line-utilities", "science::geo"]

[dependencies]
cityjson-lib = { package = "cityjson-lib", path = "..", version = "0.4.0", default-features = false, features = ["json", "arrow"] }

[dev-dependencies]
tempfile = "3.23"

[[bin]]
name = "cjexport"
path = "src/main.rs"
