[package]
name = "cityjson-index-ffi-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared C-compatible FFI core for the cityjson-index Python bindings"
readme = "README.md"
keywords = ["cityjson", "ffi", "c-abi", "geospatial"]
categories = ["api-bindings", "science::geo"]
include = [
    "/Cargo.toml",
    "/README.md",
    "/src",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "cityjson_index_ffi_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[lints]
workspace = true

[dependencies]
cityjson-index = { workspace = true }
cityjson-lib = { workspace = true, features = ["json"] }
cityjson-lib-ffi-core = { workspace = true, default-features = false }
serde_json = { version = "1.0", features = ["raw_value"] }
