[build-system]
requires = ["setuptools>=69", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "cityjson-index"
version = "0.3.1"
description = "Python bindings for cityjson-index"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["cityjson-lib~=0.5.1"]

[dependency-groups]
dev = ["tox>=4", "tox-uv>=1"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
cityjson-lib = { path = "../../../cityjson-lib/ffi/python", editable = true }

[tool.setuptools.packages.find]
where = ["src"]
