[build-system]
requires = ["setuptools>=69", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "cityjson-index"
version = "0.8.0"
description = "Python bindings for cityjson-index"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["cityjson-lib==0.8.0"]

[project.urls]
Repository = "https://github.com/3DGI/cityjson"

[dependency-groups]
dev = ["tox>=4", "tox-uv>=1"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
cityjson-lib = { path = "../../../cityjson-lib/ffi/python", editable = true }

[tool.setuptools.packages.find]
where = ["src"]
