[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "benchmark"
path = "src/main.rs"

[[bin]]
name = "prepare"
path = "src/prepare.rs"

[[bin]]
name = "geom_deref_dyn"
path = "src/geom_deref_dyn.rs"

[[bin]]
name = "geom_deref_static"
path = "src/geom_deref_static.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2"
