[package]
name = "coordinate-precision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
# compile with single-precision (f32) coordinates
"single" = []
# compile with double-precision (f64) coordinates
"double" = []
