[package]
name = "geometry-enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nested"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.114"
serde = "1.0.197"
criterion = "0.5.1"

[[bench]]
name = "speed"
harness = false
