[package]
name = "size-of-structures"
version = "0.1.0"
edition = "2021"
description = "Benchmark the size of occupied memory of the different CityJSON structure alternatives"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datasize = "0.2.10"
