[package]
name = "cityjson-lib-ffi-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[lib]
name = "cityjson_lib_ffi_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
cityjson_lib = { package = "cityjson-lib", path = "../.." }
serde_json = { version = "1.0", features = ["raw_value"] }
