[build-system]
requires = ["setuptools>=69", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "cityjson-lib"
version = "0.4.0"
description = "Python bindings for cityjson-lib"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [{ name = "Balázs Dukai" }]

[project.urls]
Repository = "https://github.com/3DGI/cityjson-lib"

[tool.setuptools.packages.find]
where = ["src"]
