[package]
name = "cityjson-lib-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "cityjson_lib_wasm"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
cityjson-lib-ffi-core = { workspace = true, default-features = false }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
